# OwnIt

./: README.md  docker-compose.dev.yml
backend/: Dockerfile.Dev  Makefile  README.md  alembic.ini  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/alembic/: README.md  env.py
backend/alembic/versions/: 852df1f13d05_initial_migration.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  logger.py
backend/app/database/: base.py  session.py
backend/app/models/: __init__.py  users.py
backend/app/schemas/: health.py
backend/tests/: conftest.py
backend/tests/api/v1/endpoints/: test_health.py
init-db/: init-db.sh
