# !!!!!!!!!!!!!!!!!!!!!!!!
# MAIN CONFIGURATION
# !!!!!!!!!!!!!!!!!!!!!!!!

# Project base data & production dependencies
[project]
    name = "OwnIt-Backend-FastAPI"
    version = "0.1.0"
    description = "A sleek and powerful self-management app designed to help you plan smarter, stay organized, and track your personal growth all in one place."
    authors = [{ name = "Szymon Dresler SamuriVii", email = "programowanie.dr011@gmail.com" }]
    requires-python = ">=3.13"

    dependencies = [
        "fastapi==0.115.0",
        "uvicorn[standard]==0.30.0",
        "pydantic-settings==2.5.0",
        "pydantic==2.9.0",
        "sqlalchemy>=2.0.35",
        "psycopg2-binary>=2.9.9",
        "alembic>=1.14.0"
    ]

# Development dependencies - install with: pip install -e ".[dev]"
[project.optional-dependencies]
    dev = [
        "ruff==0.6.0",
        "pytest==8.3.0",
        "httpx==0.27.0",
        "pytest-cov==5.0.0",
        "pytest-asyncio==0.24.0",
        "mypy==1.11.0"
    ]

# !!!!!!!!!!!!!!!!!!!!!!!!
# TOOLS CONFIGURATION
# !!!!!!!!!!!!!!!!!!!!!!!!

# Ruff base configuration
[tool.ruff]
    line-length = 88
    target-version = "py313"

# Ruff lint configuration
[tool.ruff.lint]
    select = [
        "E",    # pycodestyle errors
        "W",    # pycodestyle warnings
        "F",    # Pyflakes (logical errors)
        "I",    # isort (import sorting)
        "C90",  # mccabe (code complexity)
        "UP",   # pyupgrade (modernize syntax)
        "N",    # pep8-naming (naming conventions)
        "B",    # flake8-bugbear (common design flaws)
        "ANN",  # flake8-annotations (enforce type hints)
        "S",    # flake8-bandit (security checks)
    ]

    ignore = [
        "ANN101", # Ignore missing type annotation for 'self'
        "ANN102", # Ignore missing type annotation for 'cls'
    ]

# Ruff maximum cyclomatic complexity allowed per function
[tool.ruff.lint.mccabe]
    max-complexity = 10

# Allow FastAPI Dependency Injection and params in default arguments (Ruff B008)
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]


# Base Pytest configuration
[tool.pytest.ini_options]
    asyncio_mode = "auto" # Automatically handle async tests without extra decorators
    asyncio_default_fixture_loop_scope = "function" # Turn off asyncio_default_fixture_loop_scope warning
    testpaths = ["tests"] # Directory where tests are located
    python_files = "test_*.py" # File naming pattern for test discovery
    addopts = "-v --cov=app" # Default CLI arguments: verbose output and coverage report for 'app' folder

# Base Mypy configuration
[tool.mypy]
    python_version = "3.13"
    strict = true  # Enable all optional error checks (strict mode)
    plugins = ["pydantic.mypy"] # Pydantic plugin for better model validation during analysis

# Suppress errors for libraries without type stubs
[[tool.mypy.overrides]]
    module = "sqlalchemy.*"
    ignore_missing_imports = true